--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,30 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "SalesmanBot - AI PC Assistant",
   "version": "1.0",
   "description": "AI-powered personal salesman to help you find PC parts and builds on e-commerce sites",
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "*://*.amazon.in/*",
+    "*://*.amazon.com/*",
+    "*://*.flipkart.com/*",
+    "*://www.walmart.com/*"
   ],
   "browser_specific_settings": {
     "gecko": {
       "id": "salesmanbot@aiassistant.extension"
     }
   },
-  "host_permissions": [
-    "*://*.amazon.in/*",
-    "*://*.amazon.com/*",
-    "*://*.flipkart.com/*",
-    "*://www.walmart.com/*"
-  ],
-  "action": {
+  "icons": {
+    "128": "Salesman bot.png"
+  },
+  "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "Salesman bot.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "scripts": ["background.js"]
   },
   "content_scripts": [
     {
@@ -33,14 +34,17 @@
         "*://*.flipkart.com/*",
         "*://www.walmart.com/*"
       ],
-      "js": ["utils/productExtractor.js", "utils/queryParser.js", "utils/aiService.js", "utils/contextTracker.js", "content.js"],
+      "js": [
+        "utils/productExtractor.js",
+        "utils/queryParser.js",
+        "utils/aiService.js",
+        "utils/contextTracker.js",
+        "content.js"
+      ],
       "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
-    {
-      "resources": ["utils/*.js"],
-      "matches": ["*://*.amazon.in/*", "*://*.amazon.com/*", "*://*.flipkart.com/*", "*://www.walmart.com/*"]
-    }
+    "utils/*.js"
   ]
 }
